<resources>
    <string name="app_name">Zumpy</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="we_will_send_you_an_one_time_otp_on_this_mobile_number">We will send you an one time otp on this mobile number</string>
    <string name="otp_verfication">OTP Verfication</string>
    <string name="enter_the_otp_sent_to_you">Enter the otp sent to you</string>
    <string name="get_otp">Get Otp</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="benefits_the_mountain_pose_is_generally_the_starting_position_for_all_standing_yoga_poses_and_the_first_pose_in_the_sun_salutation_it_is_also_sometimes_known_as_the_resting_pose_and_is_a_great_neutral_position_as_well_as_a_good_tool_for_improving_posture">Benefits: The Mountain Pose is generally the starting position for all standing yoga poses and the first pose in the Sun Salutation. It is also sometimes known as the resting pose and is a great neutral position as well as a good tool for improving posture.</string>
    <string name="step_1_start_by_standing_with_your_feet_close_together_so_that_your_big_toes_touch_but_with_your_heels_just_slightly_apart_rock_slowly_and_gently_back_and_forth_or_side_toside_as_needed_until_your_weight_is_evenly_distributed_over_your_feet">Step 1: Start by standing with your feet close together so that your big toes touch, but with your heels just slightly apart. Rock slowly and gently back and forth or side–toside as needed until your weight is evenly distributed over your feet.</string>
    <string name="step_2_relax_your_arms_and_face_your_palms_forward_in_a_gesture_of_openness">Step 2: Relax your arms and face your palms forward in a gesture of openness.</string>
    <string name="step_3_imagine_a_cord_passing_up_through_your_feet_and_through_the_back_of_your_skull_pulling_you_into_a_straight_line">Step 3: Imagine a cord passing up through your feet and through the back of your skull pulling you into a straight line.</string>
    <string name="step_4_pull_your_shoulder_blades_back_towards_each_other_as_you_feel_your_tailbone_pulling_down_towards_the_ground">Step 4: Pull your shoulder blades back towards each other as you feel your tailbone pulling down towards the ground.</string>
    <string name="step_5_hold_the_pose_for_30_seconds_to_1_minute_breathing_easily">Step 5: Hold the pose for 30 seconds to 1 minute, breathing easily.</string>
    <string name="title_activity_six">six</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="standing_forward_bend">Standing Forward Bend</string>
    <string name="sanskrit_name_uttanasana">Sanskrit Name: Uttanasana</string>
    <string name="benefits_the_third_pose_in_a_basic_sun_salutation_the_standing_forward_bend_stretches_the_hamstrings_and_calves_while_strengthening_the_thighs_can_also_stimulate_the_liver_and_kidneys_which_can_help_improve_digestion">Benefits: The third pose in a basic Sun Salutation, the Standing Forward Bend stretches the hamstrings and calves while strengthening the thighs, can also stimulate the liver and kidneys, which can help improve digestion.</string>
    <string name="how_to_do_standing_forward_bend_pose">How to do standing forward bend pose:</string>
    <string name="step_1_on_an_exhale_release_your_body_forward_folding_down_as_if_you_were_trying_to_kiss_your_shins_bend_your_knees_if_there_is_too_much_pressure_on_your_back_wrap_your_hands_around_the_back_of_your_heels_but_don_t_pull_your_body_forward_release_your_neck_so_that_your_head_hangs_heavily_from_your_spine">Step 1: On an exhale, release your body forward, folding down as if you were trying to kiss your shins. Bend your knees if there is too much pressure on your back. Wrap your hands around the back of your heels, but don’t pull your body forward. Release your neck so that your head hangs heavily from your spine.</string>
    <string name="step_2_hold_position_for_10_30_seconds_then_on_an_inhale_either_return_to_standing_or_move_into_a_half_standing_forward_bend">Step 2: Hold position for 10-30 seconds, then on an inhale, either return to standing or move into a half standing forward bend.</string>
    <string name="half_standing_forward_bend">Half Standing Forward Bend</string>
    <string name="sanskrit_name_ardha_uttanasana">Sanskrit Name: Ardha Uttanasana</string>
    <string name="benefits_stretches_and_lengthens_hamstrings_calves_and_front_and_back_torso_it_also_strengthens_the_back_and_spine_improving_posture_and_is_the_fourth_pose_in_a_traditional_sun_salutation">Benefits: Stretches and lengthens hamstrings, calves, and front and back torso. It also strengthens the back and spine, improving posture and is the fourth pose in a traditional Sun Salutation.</string>
    <string name="how_to_do_half_standing_forward_bend_pose">How to do half-standing forward bend pose:</string>
    <string name="step_1_from_the_standing_forward_fold_uttanasana_press_your_hands_or_fingertips_into_the_floor_on_either_side_of_your_feet_or_press_your_palms_into_your_shins_inhale_as_you_raise_your_torso_away_from_your_thighs_straightening_your_elbows_until_your_back_forms_a_straight_perpendicular_line_to_your_legs_forming_an_inverted_l_shape">Step 1: From the Standing Forward Fold (Uttanasana), press your hands or fingertips into the floor on either side of your feet, or press your palms into your shins. Inhale as you raise your torso away from your thighs, straightening your elbows until your back forms a straight, perpendicular line to your legs, forming an inverted L shape.</string>
    <string name="step_2_keep_your_back_straight_and_your_hips_aligned_over_your_ankles_keep_your_knees_slightly_bent_and_lift_your_head_slightly_to_gaze_forward_without_compressing_the_neck">Step 2: Keep your back straight and your hips aligned over your ankles. Keep your knees slightly bent and lift your head slightly to gaze forward without compressing the neck.</string>
    <string name="step_3_hold_the_pose_for_1_minute_and_either_release_back_down_into_uttanasana_or_move_into_a_high_lunge">Step 3: Hold the pose for 1 minute and either release back down into Uttanasana or move into a high lunge.</string>
    <string name="chair_pose">Chair Pose</string>
    <string name="sanskrit_name_utkatasana">Sanskrit Name: Utkatasana</string>
    <string name="benefits_strengthens_thighs_and_ankles_while_toning_shoulders_butt_hips_and_back_also_stimulates_the_heart_and_diaphragm">Benefits: Strengthens thighs and ankles, while toning shoulders, butt, hips, and back. Also stimulates the heart and diaphragm.</string>
    <string name="how_to_do_chair_pose">How to do chair pose</string>
    <string name="step_1_start_in_tadasana_mountain_pose_as_you_inhale_raise_your_arms_perpendicular_to_the_floor_with_your_palms_facing_inward">Step 1: Start in Tadasana (Mountain Pose). As you inhale, raise your arms perpendicular to the floor, with your palms facing inward.</string>
    <string name="step_2_exhale_and_bend_your_knees_as_if_you_are_sitting_down_in_an_imaginary_chair_until_your_torso_forms_a_right_angle_to_your_thighs_keep_your_inner_thighs_parallel_to_each_other_and_push_backwards_with_your_shoulder_blades_as_if_you_were_pushing_back_on_the_back_of_a_chair">Step 2: Exhale and bend your knees, as if you are sitting down in an imaginary chair until your torso forms a right angle to your thighs. Keep your inner thighs parallel to each other and push backwards with your shoulder blades as if you were pushing back on the back of a chair.</string>
    <string name="step_3_lift_arms_up_over_your_head_and_hold_pose_for_30_seconds_to_one_minute">Step 3: Lift arms up over your head and hold pose for 30 seconds to one minute.</string>
    <string name="step_4_to_come_out_of_this_pose_inhale_while_you_straighten_your_knees">Step 4: To come out of this pose, inhale while you straighten your knees.</string>
    <string name="triangle_pose">Triangle Pose</string>
    <string name="sanskrit_name_trikonasana">Sanskrit Name: Trikonasana</string>
    <string name="benefits_the_triangle_pose_is_one_of_the_most_basic_yoga_poses_that_offers_dozens_of_variations_in_fact_no_two_sources_often_agree_on_the_proper_way_to_do_a_triangle_pose_or_its_many_variations_triangle_pose_strengthens_the_ankles_legs_thighs_and_feet_as_well_as_the_core_stretches_the_hamstrings_spine_calf_muscles_and_hips_a_well_as_improving_balance_and_opening_the_chest_to_help_improve_breathing">Benefits: The Triangle Pose is one of the most basic yoga poses that offers dozens of variations. In fact, no two sources often agree on the proper way to do a Triangle Pose or its many variations. Triangle Pose strengthens the ankles, legs, thighs and feet as well as the core. Stretches the hamstrings, spine, calf muscles and hips a well as improving balance and opening the chest to help improve breathing.</string>
    <string name="step_1_start_by_standing_on_your_mat_with_legs_spread_wide_3_4_foot_distance_between_legs_and_toes_pointing_forward">Step 1: Start by standing on your mat with legs spread wide (3-4 foot distance between legs) and toes pointing forward.</string>
    <string name="step_2_turn_your_right_foot_out_90_degrees_and_your_left_foot_in_about_45_degrees_bring_your_hands_to_your_hips_and_square_your_hips_so_you_are_now_facing_the_end_of_the_mat">Step 2: Turn your right foot out 90 degrees and your left foot in about 45 degrees. Bring your hands to your hips and square your hips so you are now facing the end of the mat</string>
    <string name="step_3_as_you_exhale_bend_from_the_hips_and_lean_your_torso_to_the_right_until_it_is_parallel_with_the_floor_keeping_your_left_hand_on_your_hips_lengthen_the_spine_and_lower_your_right_hand_to_the_floor_just_behind_your_right_foot_if_you_can_t_place_your_hand_on_the_floor_you_can_either_rest_your_hand_on_your_lower_calf_or_ankle_or_use_a_block_behind_your_right_foot_to_stabilize">Step 3: As you exhale, bend from the hips and lean your torso to the right until it is parallel with the floor. Keeping your left hand on your hips, lengthen the spine and lower your right hand to the floor just behind your right foot. If you can’t place your hand on the floor, you can either rest your hand on your lower calf or ankle or use a block behind your right foot to stabilize.</string>
    <string name="step_4_as_you_inhale_raise_the_left_arm_straight_into_the_air">Step 4: As you inhale, raise the left arm straight into the air.</string>
    <string name="step_5_exhale_and_turn_your_head_to_look_up_to_your_top_hand">Step 5: Exhale and turn your head to look up to your top hand</string>
    <string name="step_6_hold_position_for_10_30_seconds_then_bring_your_left_hand_down_and_rise_back_to_center">Step 6: Hold position for 10-30 seconds, then bring your left hand down and rise back to center.</string>
    <string name="step_7_repeat_on_opposite_side">Step 7: Repeat on opposite side.</string>
</resources>