<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:context="com.RMD.zumpy.com.Zumpy.zumpy.six"  >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/cardViewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                app:cardCornerRadius="7dp">

                <androidx.media3.ui.PlayerView
                    android:id="@+id/playerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="true"
                    android:clickable="true"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_gravity="center"
            android:fontFamily="@font/abhaya_libre_medium"
            android:text="@string/chair_pose"
            android:textSize="32dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/sanskrit_name_utkatasana"
            android:textSize="20dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:fontFamily="serif"
            android:layout_marginEnd="7dp"
            android:layout_marginTop="3dp"
            android:layout_gravity="center"
            android:text="@string/benefits_strengthens_thighs_and_ankles_while_toning_shoulders_butt_hips_and_back_also_stimulates_the_heart_and_diaphragm"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:text="@string/how_to_do_chair_pose"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:fontFamily="serif"
            android:text="@string/step_1_start_in_tadasana_mountain_pose_as_you_inhale_raise_your_arms_perpendicular_to_the_floor_with_your_palms_facing_inward"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="7dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="7dp"
            android:fontFamily="serif"
            android:text="@string/step_2_exhale_and_bend_your_knees_as_if_you_are_sitting_down_in_an_imaginary_chair_until_your_torso_forms_a_right_angle_to_your_thighs_keep_your_inner_thighs_parallel_to_each_other_and_push_backwards_with_your_shoulder_blades_as_if_you_were_pushing_back_on_the_back_of_a_chair"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="7dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="7dp"
            android:fontFamily="serif"
            android:text="@string/step_3_lift_arms_up_over_your_head_and_hold_pose_for_30_seconds_to_one_minute"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/step_4_to_come_out_of_this_pose_inhale_while_you_straighten_your_knees"
            android:textColor="@color/black"
            android:textSize="16dp" />

    </LinearLayout>
</ScrollView>