<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:context="com.RMD.zumpy.com.Zumpy.zumpy.seven"  >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/cardViewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                app:cardCornerRadius="7dp">

                <androidx.media3.ui.PlayerView
                    android:id="@+id/playerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="true"
                    android:clickable="true"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_gravity="center"
            android:fontFamily="@font/abhaya_libre_medium"
            android:text="@string/triangle_pose"
            android:textSize="32dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/sanskrit_name_trikonasana"
            android:textSize="20dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="7dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="7dp"
            android:fontFamily="serif"
            android:text="@string/benefits_the_triangle_pose_is_one_of_the_most_basic_yoga_poses_that_offers_dozens_of_variations_in_fact_no_two_sources_often_agree_on_the_proper_way_to_do_a_triangle_pose_or_its_many_variations_triangle_pose_strengthens_the_ankles_legs_thighs_and_feet_as_well_as_the_core_stretches_the_hamstrings_spine_calf_muscles_and_hips_a_well_as_improving_balance_and_opening_the_chest_to_help_improve_breathing"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:text="How to do triangle pose: "
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:fontFamily="serif"
            android:text="@string/step_1_start_by_standing_on_your_mat_with_legs_spread_wide_3_4_foot_distance_between_legs_and_toes_pointing_forward"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="7dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="7dp"
            android:fontFamily="serif"
            android:text="@string/step_2_turn_your_right_foot_out_90_degrees_and_your_left_foot_in_about_45_degrees_bring_your_hands_to_your_hips_and_square_your_hips_so_you_are_now_facing_the_end_of_the_mat"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="7dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="7dp"
            android:fontFamily="serif"
            android:text="@string/step_3_as_you_exhale_bend_from_the_hips_and_lean_your_torso_to_the_right_until_it_is_parallel_with_the_floor_keeping_your_left_hand_on_your_hips_lengthen_the_spine_and_lower_your_right_hand_to_the_floor_just_behind_your_right_foot_if_you_can_t_place_your_hand_on_the_floor_you_can_either_rest_your_hand_on_your_lower_calf_or_ankle_or_use_a_block_behind_your_right_foot_to_stabilize"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="7dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="7dp"
            android:fontFamily="serif"
            android:text="@string/step_4_as_you_inhale_raise_the_left_arm_straight_into_the_air"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="7dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="7dp"
            android:fontFamily="serif"
            android:text="@string/step_5_exhale_and_turn_your_head_to_look_up_to_your_top_hand"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="7dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="7dp"
            android:fontFamily="serif"
            android:text="@string/step_6_hold_position_for_10_30_seconds_then_bring_your_left_hand_down_and_rise_back_to_center"
            android:textSize="16dp"
            android:textColor="@color/black"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/step_7_repeat_on_opposite_side"
            android:textColor="@color/black"
            android:textSize="16dp" />

    </LinearLayout>
</ScrollView>