<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:context="com.RMD.zumpy.com.Zumpy.zumpy.threee">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/cardViewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                app:cardCornerRadius="7dp">

                <androidx.media3.ui.PlayerView
                    android:id="@+id/playerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="true"
                    android:clickable="true"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:fontFamily="@font/abhaya_libre_medium"
            android:text="@string/standing_forward_bend"
            android:textSize="32dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:fontFamily="serif"
            android:text="@string/sanskrit_name_uttanasana"
            android:textSize="20dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="3dp"
            android:fontFamily="serif"
            android:layout_marginEnd="7dp"
            android:text="@string/benefits_the_third_pose_in_a_basic_sun_salutation_the_standing_forward_bend_stretches_the_hamstrings_and_calves_while_strengthening_the_thighs_can_also_stimulate_the_liver_and_kidneys_which_can_help_improve_digestion"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:text="@string/how_to_do_standing_forward_bend_pose"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="serif"
            android:text="@string/step_1_on_an_exhale_release_your_body_forward_folding_down_as_if_you_were_trying_to_kiss_your_shins_bend_your_knees_if_there_is_too_much_pressure_on_your_back_wrap_your_hands_around_the_back_of_your_heels_but_don_t_pull_your_body_forward_release_your_neck_so_that_your_head_hangs_heavily_from_your_spine"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="serif"
            android:text="@string/step_2_hold_position_for_10_30_seconds_then_on_an_inhale_either_return_to_standing_or_move_into_a_half_standing_forward_bend"
            android:textSize="16dp"
            android:layout_marginBottom="40dp"
            android:textColor="@color/black"/>
    </LinearLayout>
</ScrollView>