<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:context="com.RMD.zumpy.com.Zumpy.zumpy.four"  >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/cardViewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                app:cardCornerRadius="7dp">

                <androidx.media3.ui.PlayerView
                    android:id="@+id/playerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="true"
                    android:clickable="true"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_gravity="center"
            android:fontFamily="@font/abhaya_libre_medium"
            android:text="@string/half_standing_forward_bend"
            android:textSize="32dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/sanskrit_name_ardha_uttanasana"
            android:textSize="20dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:fontFamily="serif"
            android:layout_marginEnd="7dp"
            android:layout_marginTop="3dp"
            android:layout_gravity="center"
            android:text="@string/benefits_stretches_and_lengthens_hamstrings_calves_and_front_and_back_torso_it_also_strengthens_the_back_and_spine_improving_posture_and_is_the_fourth_pose_in_a_traditional_sun_salutation"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:text="@string/how_to_do_half_standing_forward_bend_pose"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:fontFamily="serif"
            android:text="@string/step_1_from_the_standing_forward_fold_uttanasana_press_your_hands_or_fingertips_into_the_floor_on_either_side_of_your_feet_or_press_your_palms_into_your_shins_inhale_as_you_raise_your_torso_away_from_your_thighs_straightening_your_elbows_until_your_back_forms_a_straight_perpendicular_line_to_your_legs_forming_an_inverted_l_shape"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginStart="7dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="7dp"
            android:fontFamily="serif"
            android:text="@string/step_2_keep_your_back_straight_and_your_hips_aligned_over_your_ankles_keep_your_knees_slightly_bent_and_lift_your_head_slightly_to_gaze_forward_without_compressing_the_neck"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/step_3_hold_the_pose_for_1_minute_and_either_release_back_down_into_uttanasana_or_move_into_a_high_lunge"
            android:textColor="@color/black"
            android:textSize="16dp" />

    </LinearLayout>
</ScrollView>